--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -6,7 +6,7 @@
         "start": "ts-node server.ts"
     },
     "dependencies": {
-        "@smooth-integration/node-sdk": "link:../../dist/",
+        "@smooth-integration/sdk-node": "^0.2.7",
         "express": "^5.0.1"
     },
     "devDependencies": {
